# generate-swedish-sentences

./: .gitignore  README.md  README.rst  pyproject.toml
generate-swedish-sentences/: __init__.py  __main__.py  swedish_grammar.txt
swedish_pcfg/: __init__.py  __main__.py  swedish_grammar.txt
